<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/menu_register">
        <menu>
                <item
                    android:id="@+id/nav_regOwner"
                    android:title="@string/menu_regOwner"/>
        </menu>
        </item>
    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/nav_profile"

            android:title="@string/menu_profile"
            />
        <item
            android:id="@+id/nav_settings"

            android:title="@string/action_settings"/>

    </group>
    <group
        android:id="@+id/group3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:checked="true"
            android:title="@string/menu_logout"
            />
        <item
            android:id="@+id/nav_delete"
            android:title="@string/menu_delete_account"
            />
    </group>

</menu>