<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.AppBarLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_login"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:src="@drawable/auto" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/iv_logo"
                        android:text="@string/login_header"
                        android:textColor="@color/white"
                        android:textSize="@dimen/smallText_sp_12"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/iv_logo"
                        android:text="@string/owner_waitforriderequest"
                        android:textColor="@color/white"
                        android:textSize="@dimen/normalText_sp_14"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_searchRide"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/button_marginBottom"
                android:layout_marginLeft="@dimen/button_marginLeft"
                android:layout_marginRight="@dimen/button_marginRight"
                android:background="@drawable/button_cornered"
                android:backgroundTint="@color/text_color"
                android:gravity="center"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="@string/search_ride"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/normalText_sp_14"
                android:textStyle="bold" />
        </RelativeLayout>

    </android.support.design.widget.CoordinatorLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:itemIconTint="@android:color/black"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/menu_drawer_owner"/>
</android.support.v4.widget.DrawerLayout>
